
@startuml
title 30-class-UserProjectService / static structure
skinparam BackgroundColor #f0f0f0

package "app.services" {
  class UserProjectService <<service>> {
    - project_repo: ProjectRepository
    + __init__(project_repo: ProjectRepository)
    + list_projects_for_user(ctx: UserContext) : Sequence[Project]
  }
}

package "app.repositories" {
  class ProjectRepository <<repository>> {
    + __init__(db: Session)
    + list_projects_for_tenant(tenant_id: int) : Sequence[Project]
  }
}

package "app.core" {
  class UserContext <<context>>
}

package "app.models.orm" {
  class Project <<aggregate>>
}

UserProjectService --> ProjectRepository : uses
UserProjectService ..> UserContext : consumes (ctx.tenant_id, ctx.user_id)
ProjectRepository ..> Project : returns

note right of UserProjectService
Source: app/services/user_project_service.py
end note

note right of ProjectRepository
Source: app/repositories/project_repository.py
end note

@enduml
